# hermes-trading

./: .env  Dockerfile  TRADING_PRINCIPLES.md  backtest.py  backtest_explore.py  pyproject.toml  redeploy.py
.railway/: config.json
hermes_trading/: __init__.py  compare.py  dashboard.py  loop.py  reflect.py  run.py  score.py
hermes_trading/adapters/: bars.py  macro.py  news.py  onchain.py  price.py
hermes_trading/execution/: __init__.py  alpaca.py  base.py  paper.py
hermes_trading/treasurer/: __init__.py  treasury.py
state/: goal.yaml  hypotheses.jsonl  strategy.yaml  trades.jsonl
state/history/: v01.yaml  v02.yaml
