[project]
name = "hermes-trading"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.3",
    "yfinance>=0.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.scripts]
hermes-trading = "hermes_trading.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
